--- a/templates/index.html
+++ b/templates/index.html
@@ -245,7 +245,7 @@ PD 6, Thursday, December 21st</textarea>
                 console.error('❌ Error:', error);
                 alert('An error occurred. Please try again.');
             });
-            window.location.href = "/hola";
+            window.location.href = "/generateStep1";
         }
     </script>
 </body>
