--- a/templates/generateStep1.html
+++ b/templates/generateStep1.html
@@ -301,6 +301,8 @@
       .then(res => res.json())
       .then(data => console.log("Success:", data))
       .catch(err => console.error("Error sending schedule:", err));
+
+      window.location.href = "/generateStep2";
     }
   </script>
 </body>
