--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -226,7 +226,7 @@
       allItems=data.roomDayDistribution;
       // You can store or log `data.backupRoomDict` if needed
     })
-    .catch(err => console.error("Failed to fetch room data:", err));*/
+    .catch(err => console.error("Failed to fetch room data:", err));
 
     var initRoomDistribution={};
     Object.entries(allItems).forEach(([roomName, days]) => {  
