--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -564,7 +564,7 @@
     
 
     // Get the element with id="defaultOpen" and click on it
-    document.getElementById("defaultOpen").click();
+    /*document.getElementById("defaultOpen").click();*/
     document.getElementById("generate").style.display = "block";
     
     
