--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -232,7 +232,7 @@
     Object.entries(allItems).forEach(([roomName, days]) => {  
     	initRoomDistribution[roomName]=days[0][0];
     });
-    console.log(initRoomDistribution);
+    console.log(JSON.stringify(initRoomDistribution));
 	  
     const topicColors = [
       "#ffcccc", "#ccffff", "#ccffcc", "#ffe0b3", "#e0ccff",
