--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -145,7 +145,7 @@
     
     .button {
       border: none;
-      color: white;
+      color: black;
       padding: 15px 32px;
       text-align: center;
       text-decoration: none;
