--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@ PD 6, Thursday, December 21st</textarea>
             const blurbCol = document.getElementById('blurb').value;
             
             const allTimes = document.getElementById('timesInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
-			const allRooms = document.getElementById('roomsInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
+	    const allRooms = document.getElementById('roomsInput').value.trim().split('\n').map(t => t.trim()).filter(t => t !== '');
 
             
             
@@ -234,13 +234,14 @@ PD 6, Thursday, December 21st</textarea>
                 availabilityCol: availabilityCol,
                 friendsCol: friendsCol,
                 blurbCol: blurbCol,
-                allTimes: allTimes
+                allTimes: allTimes,
+		allRooms: allRooms
             };
             
             console.log(JSON.stringify(data));
             
             // Send the data to the backend
-            fetch('/submit_availability', {
+            fetch('/parse_data', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
